# checked

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: flake_update.yaml  release.yaml  test.yaml
checked_cli/: Cargo.toml
checked_cli/src/: cli.rs  common.rs  distribute.rs  fetch.rs  generate.rs  hc_client.rs  hc_discover.rs  interactive.rs  lib.rs  password.rs  sign.rs  verify.rs
checked_cli/tests/: cli.rs  commands.rs  happ_integration.rs
dnas/checked/workdir/: dna.yaml
dnas/checked/zomes/coordinator/fetch/: Cargo.toml
dnas/checked/zomes/coordinator/fetch/src/: asset_signature.rs  lib.rs
dnas/checked/zomes/coordinator/signing_keys/: Cargo.toml
dnas/checked/zomes/coordinator/signing_keys/src/: key_collection.rs  lib.rs  verification_key_dist.rs
dnas/checked/zomes/integrity/fetch/: Cargo.toml
dnas/checked/zomes/integrity/fetch/src/: asset_signature.rs  common.rs  lib.rs
dnas/checked/zomes/integrity/signing_keys/: Cargo.toml
dnas/checked/zomes/integrity/signing_keys/src/: key_collection.rs  lib.rs  verification_key_dist.rs
dnas/trusted/workdir/: dna.yaml
dnas/trusted/zomes/coordinator/signing_keys/src/: key_collection.rs  verification_key_dist.rs
dnas/trusted/zomes/coordinator/trusted/: Cargo.toml
dnas/trusted/zomes/coordinator/trusted/src/: gpg_key.rs  gpg_key_dist.rs  gpg_util.rs  key_collection.rs  lib.rs  verification_key_dist.rs
dnas/trusted/zomes/integrity/signing_keys/: Cargo.toml
dnas/trusted/zomes/integrity/signing_keys/src/: key_util.rs  verification_key_dist.rs
dnas/trusted/zomes/integrity/trusted/: Cargo.toml
dnas/trusted/zomes/integrity/trusted/src/: convert.rs  gpg_key.rs  gpg_key_dist.rs  gpg_util.rs  key_collection.rs  lib.rs  verification_key_dist.rs
dnas/trusted/zomes/integrity/trusted/src/key_util/: mini_sign_util.rs
docs/: publisher-guide.md  user-guide.md
scripts/: create_players.sh  fetch_asset.sh  sign_asset.sh
tests/: package.json  vitest.config.ts
tests/src/checked/: common.ts
tests/src/checked/fetch/: common.ts  fetch.test.ts
tests/src/checked/signing_keys/: common.ts  key-collection.test.ts  reference-count.test.ts  validation-key-dist.test.ts
tests/src/trusted/trusted/: common.ts  gpg-key-dist.test.ts  gpg-key.test.ts  key-collection.test.ts  reference-count.test.ts  validation-key-dist.test.ts
types/checked_fetch/: Cargo.toml
types/checked_fetch/src/: lib.rs
types/checked_types/: Cargo.toml
types/checked_types/src/: lib.rs
types/fetch/: Cargo.toml
types/fetch/src/: lib.rs
types/signing_keys/: Cargo.toml
types/signing_keys/src/: lib.rs
ui/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.vue  main.ts  router.ts  signals.ts  style.css
ui/src/checked/fetch/: MyAssetSignatures.vue  types.ts
ui/src/checked/signing_keys/: AddKeyToCollection.vue  CreateKeyCollection.vue  DistributeSigningKey.vue  KeyCollections.vue  MyKeys.vue  SearchKeys.vue  types.ts
ui/src/component/: GpgFingerprint.vue  IconButton.vue  KeyList.vue  LoadingSpinner.vue  NavBar.vue  Notify.vue  NotifyContainer.vue  Settings.vue  SettingsEditor.vue
ui/src/pages/: AboutPage.vue  HomePage.vue  MyAssetSignaturesPage.vue  SearchPage.vue  SettingsPage.vue
ui/src/store/: key-collections-store.ts  my-asset-signatures-store.ts  my-keys-store.ts  notifications-store.ts  theme-store.ts
ui/src/trusted/trusted/: AddKeyToCollection.vue  CreateGpgKey.vue  CreateKeyCollection.vue  DistributeGpgKey.vue  DistributeSigningKey.vue  GpgKeyDetail.vue  KeyCollections.vue  MyKeys.vue  SearchKeys.vue  types.ts
workdir/: happ.yaml  web-happ.yaml
