[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "dnas/*/zomes/coordinator/*",
    "dnas/*/zomes/integrity/*"
]

exclude = ["checked_cli"]

resolver = "2"

[workspace.dependencies]
hdi = "=0.4.0-beta-dev.31"
hdk = "=0.3.0-beta-dev.35"
serde = "1.0"
chrono = { version = "0.4.34", default-features = false, features = ["clock", "std"] }
hex = "0.4.3"
regex = "1.10.3"
nanoid = "0.4.0"
anyhow = "1.0.81"
minisign-verify = "0.2.1"
url = "2.5.0"

signing_keys = { path = "dnas/checked/zomes/coordinator/signing_keys" }
signing_keys_integrity = { path = "dnas/checked/zomes/integrity/signing_keys" }

fetch = { path = "dnas/checked/zomes/coordinator/fetch" }
fetch_integrity = { path = "dnas/checked/zomes/integrity/fetch" }
