[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "dnas/*/zomes/coordinator/*",
    "dnas/*/zomes/integrity/*",
    "types/*"
]

exclude = ["checked_cli"]

resolver = "2"

[workspace.dependencies]
hdi = "=0.4.0-beta-dev.32"
hdk = "=0.3.0-beta-dev.36"
holochain_types = "0.3.0-beta-dev.38"
serde = "1.0"
chrono = { version = "0.4.34", default-features = false, features = ["clock", "std"] }
hex = "0.4.3"
regex = "1.10.3"
nanoid = "0.4.0"
anyhow = "1.0.81"
minisign-verify = "0.2.1"
url = "2.5.0"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

signing_keys_types = { path = "types/signing_keys" }
signing_keys = { path = "dnas/checked/zomes/coordinator/signing_keys" }
signing_keys_integrity = { path = "dnas/checked/zomes/integrity/signing_keys" }

fetch_types = { path = "types/fetch" }
checked_fetch_types = { path = "types/checked_fetch" }
fetch = { path = "dnas/checked/zomes/coordinator/fetch" }
fetch_integrity = { path = "dnas/checked/zomes/integrity/fetch" }
