[package]
name = "checked_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "checked"

[dependencies]
holochain_client = { version = "=0.5.0-dev.31", default-features = false }
holochain_conductor_api = "0.3.0-beta-dev.40"
holochain_types = "0.3.0-beta-dev.38"
checked_types = { path = "../types/checked_types" }
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
minisign = "0.7.6"
reqwest = "0.12.2"
tempfile = "3.10.1"
tokio = "1.37.0"
url = "2.5.0"
indicatif = "0.17.8"
dialoguer = "0.11.0"
ed25519-dalek = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

[target.'cfg(any(windows, unix))'.dependencies]
dirs = "5.0.1"
rpassword = "7.3.1"

[dev-dependencies]
holochain = { version = "0.3.0-beta-dev.43", default-features = false, features = ["sweetest"] }
signing_keys_types = { path = "../types/signing_keys" }
