[package]
name = "checked_cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "checked"

[dependencies]
holochain_client = { version = "=0.6.0", default-features = false }
holochain_conductor_api = { version = "0.4.1", features = ["sqlite-encrypted"] }
holochain_types = "0.4.1"
checked_types = { path = "../types/checked_types" }
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive", "cargo"] }
minisign = "0.7.6"
reqwest = "0.12.2"
tempfile = "3.10.1"
tokio = "1.37.0"
indicatif = "0.17.8"
dialoguer = "0.11.0"
ed25519-dalek = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
itertools = "0.14.0"
proc-ctl = { version = "0.4.0" }

[target.'cfg(any(windows, unix))'.dependencies]
dirs = "6.0"
rpassword = "7.3.1"

[dev-dependencies]
holochain = { version = "0.4.1", default-features = false, features = ["sweettest", "wasmer_sys", "sqlite-encrypted"] }
signing_keys_types = { path = "../types/signing_keys" }
warp = "0.3.6"

[lints.rust]
let_underscore_drop = "forbid"
unsafe_code = "forbid"

missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

# Cannot use this currently since it doesn't understand the library+binary pattern.
# unused_crate_dependencies = "deny"

absolute_paths_not_starting_with_crate = "warn"
keyword_idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

# At the time of adding, these took the binary size from 23MB to 8.3Mb. Still big but better.
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
