[package]
name = "fetch"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fetch"

[dependencies]
hdk = { workspace = true }

url = { workspace = true }
serde = { workspace = true }

signing_keys_types = { workspace = true }
fetch_integrity = { workspace = true }
fetch_types = { workspace = true }