[package]
name = "signing_keys"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "signing_keys"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }

minisign-verify = { workspace = true }
chrono = { workspace = true }
nanoid = { workspace = true }

checked_types = { workspace = true }
signing_keys_integrity = { workspace = true }
