[package]
name = "trusted"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "trusted"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

trusted_integrity = { workspace = true } 

pgp = "0.10.2"
hex = "0.4.3"
regex = "1.10.3"
chrono = { version = "0.4.34", default-features = false, features = ["clock", "std"] }
